# Linux-Workspace-Observer

./: .gitignore  DEV.md  README.md  demo.py  dev.sh  lwo.toml.example  main.py  pyproject.toml
config/: lwo.toml.example
lwo/: __init__.py  config.py  daemon.py
lwo/cli/: __init__.py  commands.py
lwo/collectors/: __init__.py  directory_discovery.py  file_monitor.py  git_context.py  journalctl_collector.py  log_collector.py  log_collector_factory.py  null_log_collector.py  process_snapshot.py  shell_hook.py
lwo/inference/: __init__.py  agent_intervention.py  agent_schemas.py  agent_tools.py  analyzer.py  anomaly_detector.py  anomaly_monitor.py  openai_client.py
lwo/notifications/: __init__.py  notifier.py
lwo/processors/: __init__.py  aggregator.py  sanitizer.py
lwo/reporting/: __init__.py  work_summary.py
lwo/storage/: __init__.py  database.py  models.py  schema.sql  schema_agent.sql
lwo/utils/: __init__.py  logger.py
scripts/: install.sh
scripts/shell_hooks/: bash_hook.sh  zsh_hook.sh
